--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,14 @@
 }
 
 
-#sidebar-icons {
+.temp-buffer {
+  flex: 0 0 40px;
+  border-bottom:1px solid #494e64;
+  box-sizing: border-box;
+  order:0;
+}
+
+.sidebar-icons {
   display:flex;
   flex-direction: column;
   order:0;
@@ -54,14 +61,7 @@
   border-right:1px solid #494e64;
 }
 
-#temp-buffer {
-  flex: 0 0 40px;
-  border-bottom:1px solid #494e64;
-  box-sizing: border-box;
-  order:0;
-}
-
-#sidebar-icons button {
+.sidebar-icons button {
   flex: 0 0 50px;
   box-sizing: border-box;
   padding: 10px;
@@ -75,16 +75,16 @@
   user-select: none;
 }
 
-#sidebar-icons button:hover {
+.sidebar-icons button:hover {
   /* filter: invert(79%) sepia(0%) saturate(7221%) hue-rotate(353deg) brightness(156%) contrast(69%); */
   filter: invert(90%) sepia(18%) saturate(584%) hue-rotate(61deg) brightness(104%) contrast(101%);
   cursor: pointer;
 }
-#sidebar-icons button.selected {
+.sidebar-icons button.selected {
   filter: invert(90%) sepia(18%) saturate(584%) hue-rotate(61deg) brightness(104%) contrast(101%);
 }
 
-#sidebar-icons button img{
+.sidebar-icons button img{
   width: 100%;
   height: 100%
 }
@@ -126,7 +126,7 @@
 
 
 /* The side navigation menu */
-#sidebar-details {
+.sidebar-details {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -141,14 +141,14 @@
   flex-basis: 200px;
 }
 
-#open-folder-wrapper {
+.open-folder-wrapper {
   height: 25%; 
   width: 100%; 
   display: flex; 
   justify-content: center;
 }
 
-#open-folder-wrapper #open-folder {
+.open-folder-wrapper .open-folder {
   height:fit-content; 
   width: fit-content; 
   align-self: center; 
@@ -168,29 +168,30 @@
   -ms-user-select: none; 
   user-select: none;
 }
-#open-folder-wrapper #open-folder:hover {
+.open-folder-wrapper .open-folder:hover {
   background-color:#C4FFC2;
   color:#121212;  
   cursor: pointer;
 }
 
 
-#sidebar-title {
+.sidebar-title {
   order:0;
   box-sizing: border-box;
   color: #e3e3e3;
   background-color: #121212;
   width: 100%;
-  padding-top:11px;
-  padding-left:10px;
+  display:flex;
   text-decoration: none;
   font-family:'Inter';
-  text-align: left;
+  align-items:center;
+  padding-left:10px;
   font-size: 14px;
   font-weight: 400;
   flex: 0 0 40px;
   border:0;
-  border-bottom:1px solid #494e64;;
+  border-bottom:1px solid #494e64;
+  border-top: 1px solid transparent;
   -webkit-user-select: none; 
   -khtml-user-select: none; 
   -moz-user-select: none; 
@@ -201,7 +202,7 @@
 
 
 
-#resizer {
+.resizer {
   background-color: #494e64;
   cursor: col-resize;
   height:100%;
@@ -226,10 +227,37 @@
   flex-direction: row;
   flex: 0 0 40px;
   margin:0;
-  border-bottom: 1px solid #494e64;
   border-top: 0;
   box-sizing: border-box;
 }
+
+.outer-code-area .tabs .tab {
+  padding:0;
+  border:0;
+
+  align-items: center;
+  cursor: pointer;
+  display: flex;
+  font-family: "Inter";
+  font-size: 14px;
+  font-weight:400;
+  height: 100%;
+
+  padding-left: 10px;
+  padding-right: 28px;
+  border-top: 1px solid transparent;
+  background-color: #343746;
+  color: #e3e3e3;
+  box-sizing: border-box;
+}
+
+
+.outer-code-area .tabs .tab.selected {
+  background-color: #12141d;
+  /* border-top-color: #931cff; */
+  border-top-color: #C4FFC2;
+}
+
 .outer-code-area .ide{
   display:flex;
   flex-direction: row;
@@ -240,7 +268,7 @@
 
 
 
-#line-numbers {
+.line-numbers {
   order:0;
   flex: 0 0 40px;
   border:0;
@@ -254,7 +282,7 @@
 
 }
 
-#line-numbers button{
+.line-numbers button{
   color: #878787;
   background: transparent;
   caret-color: transparent;                                                                                                                                              
@@ -286,7 +314,7 @@
 
 
 
-#editing, #highlighting {
+.editing, .highlighting {
   /* Both elements need the same text and space styling so they are directly on top of each other */
   box-sizing: border-box;
   border: 0;
@@ -307,17 +335,17 @@
   tab-size: 4;
 }
 
-#editing::selection {
+.editing::selection {
   background: rgba(0, 122, 204, 0.3);
 }
-#editing::-moz-selection { /* Code for Firefox */
+.editing::-moz-selection { /* Code for Firefox */
   background: rgba(0, 122, 204, 0.3);
 }
 
 
 /* Make textarea almost completely transparent */
 
-#editing {
+.editing {
   color: transparent;
   background: transparent;
   caret-color: white; /* Or choose your favourite color */
@@ -325,26 +353,20 @@
   z-index: 1;
 }
 
-#highlighting {
+.highlighting {
   z-index: 0;
 }
 
-#highlighting-content{
+.highlighting-content{
   width: max-content;
   height: max-content;
 }
 
 
-#fs {
+.fs {
   overflow-x:hidden;
   overflow-y: auto;
   scrollbar-color: gray #121212;
-}
-
-
-#dir {
-  display: flex;
-  flex-direction: column;
 }
 
 
