--- a/styles.css
+++ b/styles.css
@@ -67,21 +67,26 @@
   padding: 10px;
   background:transparent;
   border:0;
+  border-left: 1px solid transparent;
   filter: invert(55%) sepia(0%) saturate(202%) hue-rotate(189deg) brightness(96%) contrast(83%);
   -webkit-user-select: none; 
   -khtml-user-select: none; 
   -moz-user-select: none; 
   -ms-user-select: none; 
   user-select: none;
+  transition:all .3s ease;
 }
 
 .sidebar-icons button:hover {
-  /* filter: invert(79%) sepia(0%) saturate(7221%) hue-rotate(353deg) brightness(156%) contrast(69%); */
   filter: invert(90%) sepia(18%) saturate(584%) hue-rotate(61deg) brightness(104%) contrast(101%);
   cursor: pointer;
+  transition:all .3s ease;
+  
 }
+
 .sidebar-icons button.selected {
   filter: invert(90%) sepia(18%) saturate(584%) hue-rotate(61deg) brightness(104%) contrast(101%);
+  border-left: 1px solid;
 }
 
 .sidebar-icons button img{
@@ -167,11 +172,13 @@
   -moz-user-select: none; 
   -ms-user-select: none; 
   user-select: none;
+  transition:all .3s ease;
 }
 .open-folder-wrapper .open-folder:hover {
   background-color:#C4FFC2;
   color:#121212;  
   cursor: pointer;
+  transition:all .3s ease;
 }
 
 
@@ -199,6 +206,349 @@
   user-select: none;
 }
 
+
+.card {
+  border: 1px solid #494e64;
+  border-radius: 8px;
+  margin:10px;
+  display:flex;
+  flex-direction:column;
+}
+
+.card-head{
+  order:0;
+  background: transparent;
+  border-bottom: 1px solid #494e64;
+  border-radius: 8px 8px 0 0;
+  color: #e3e3e3;
+  font-size: 14px;
+  font-weight: 400;
+  justify-content: center;
+  margin-bottom: -1px;
+  min-height: 40px;
+  padding-left: 10px;
+  padding-right:10px;
+  padding-bottom: 3px;
+  padding-top:3px;
+  box-sizing:border-box;
+}
+
+.dropdown-custom{
+  position:relative;
+}
+
+.dropdown-custom .dropdown-button {
+  box-sizing: border-box;
+  border: 1px solid #494e64;
+  padding:7.5px;
+  padding-left: 10px;
+  border-radius: 6px;
+  cursor: pointer;
+  font-family:'Inter'; 
+  font-size: 14px;
+  font-weight: 400;
+  -webkit-user-select: none; 
+  -khtml-user-select: none; 
+  -moz-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none;
+  order: 0;
+  display:flex;
+}
+
+.dropdown-custom .dropdown-button.show {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+
+.dropdown-custom .dropdown-button img {
+  float:right;
+  pointer-events:none;
+  order:2;
+}
+
+.buffer{
+  height:max-content; 
+  width:calc(100% - 16px);
+  pointer-events: none;
+  -webkit-user-select: none; 
+  -khtml-user-select: none; 
+  -moz-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none;
+}
+
+.dropdown-custom .dropdown-content{
+  position:absolute; 
+  order: 1; 
+  height:max-content;
+  width: 100%;
+  border: 1px solid #494e64;
+  border-top:0;
+  background-color:#121212;
+  box-sizing: border-box;
+  display:flex;
+  flex-direction: column;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+  z-index:2;
+}
+
+
+.dropdown-custom .dropdown-content .dropdown-item {
+  box-sizing: border-box;
+  padding:7.5px;
+  padding-left: 10px;
+  cursor: pointer;
+  font-family:'Inter'; 
+  font-size: 14px;
+  font-weight: 400;
+  -webkit-user-select: none; 
+  -khtml-user-select: none; 
+  -moz-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none;
+  background: rgba(39,41,53,.7);
+}
+
+.dropdown-custom .dropdown-content .dropdown-item.selected {
+  background-color:#C4FFC2;
+  color:#121212;
+  transition:all .3s ease;  
+}
+
+.dropdown-custom .dropdown-content .dropdown-item:hover {
+  background-color:#C4FFC2;
+  color:#121212;
+  transition:all .3s ease;  
+}
+
+.card-body-wrapper{
+  display:flex; 
+  flex-direction:column; 
+  order:1; 
+  height:100%;
+}
+
+.card-body {
+  order:1;
+  padding:10px; 
+  height:100%;
+}
+
+
+
+.field-title{
+  font-size: 12px;
+  font-weight: 400;
+  font-family:'Inter'; 
+  color: #e3e3e3;
+  padding-bottom:6px;
+  -webkit-user-select: none; 
+  -khtml-user-select: none; 
+  -moz-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none;
+}
+
+.input-field{
+  margin-bottom: 10px;
+}
+
+.input-field input{
+  border: 1px solid #494e64;
+  border-radius: 6px;
+  width:100%;
+  font-size: 14px;
+  font-weight: 400;
+  font-family:'Inter'; 
+  color: #e3e3e3;
+  background-color: #121212;
+  padding-top: 8px;
+  padding-bottom: 7px;
+  padding-left:12px;
+  box-sizing: border-box;
+}
+
+.input-field input:focus{
+  outline-width: 0;
+}
+
+.output-field{
+  margin-bottom: 10px;
+}
+
+.output-field input{
+  border: 1px solid #494e64;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  width:100%;
+  font-size: 14px;
+  font-weight: 400;
+  font-family:'Inter'; 
+  color: #e3e3e3;
+  background-color: #242424;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-left:12px;
+  box-sizing: border-box;
+}
+
+
+.output-field input:focus{
+  outline-width: 0;
+}
+
+.output-input-wrapper {
+  display:flex; 
+  flex-direction:row;
+  height:100%;
+  width:100%;
+}
+
+.output-img-wrapper {
+  border: 1px solid #494e64;
+  border-left:0;
+  border-top-right-radius: 6px;
+  border-bottom-right-radius: 6px;
+  padding:3px;
+  padding-top:5px;
+  flex:1;
+  display: flex;
+  justify-content: center;
+  vertical-align: middle;
+}
+
+.output-img-wrapper img {
+  filter: invert(55%) sepia(0%) saturate(202%) hue-rotate(189deg) brightness(96%) contrast(83%);
+  box-sizing: border-box;
+  height:80%;
+  transition:all .3s ease;
+}
+
+.output-img-wrapper img:hover {
+  filter: invert(90%) sepia(18%) saturate(584%) hue-rotate(61deg) brightness(104%) contrast(101%);
+  cursor: pointer;
+  transition:all .3s ease;
+}
+
+.output-textarea-wrapper{
+  display: flex;
+  flex-direction: row;
+  height:100%;
+}
+
+.output-textarea-img-wrapper  {
+  display:flex;
+  align-items: center;
+  padding:5px;
+  padding-right:0;
+}
+
+.output-textarea-img-wrapper img {
+  filter: invert(55%) sepia(0%) saturate(202%) hue-rotate(189deg) brightness(96%) contrast(83%);
+  box-sizing: border-box;
+  transition:all .3s ease;
+}
+
+.output-textarea-img-wrapper img:hover {
+  filter: invert(90%) sepia(18%) saturate(584%) hue-rotate(61deg) brightness(104%) contrast(101%);
+  cursor: pointer;
+  transition:all .3s ease;
+}
+
+.card-divider{
+  border-bottom: 1px solid #494e64;
+  order: 2;
+  margin: 10px;
+  margin-top:0;
+}
+
+
+
+
+.card-button {
+  height:fit-content; 
+  width: fit-content; 
+  align-self: center; 
+  border:0; 
+  color:#C4FFC2; 
+  font-family:'Inter'; 
+  font-size: 14px; 
+  font-weight: 400; 
+  border-radius: 5px;
+  border: 2px solid #C4FFC2; /* Green */
+  padding:10px; 
+  /* background-color: #026ec1; */
+  background-color: #121212;
+  -webkit-user-select: none; 
+  -khtml-user-select: none; 
+  -moz-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none;
+  order:3;
+  margin-bottom:10px;
+  min-width:75px;
+  transition:all .3s ease;
+}
+.card-button:hover {
+  background-color:#C4FFC2;
+  color:#121212;  
+  cursor: pointer;
+  transition:all .3s ease;
+}
+
+
+.card-button-clear {
+  height:fit-content; 
+  width: fit-content; 
+  align-self: center; 
+  border:0; 
+  color:#494e64;
+  font-family:'Inter'; 
+  font-size: 14px; 
+  font-weight: 400; 
+  border-radius: 5px;
+  border: 2px solid #494e64;; /* Green */
+  padding:10px; 
+  /* background-color: #026ec1; */
+  background-color: #121212;
+  -webkit-user-select: none; 
+  -khtml-user-select: none; 
+  -moz-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none;
+  order:3;
+  margin-bottom:10px;
+  min-width:75px;
+  transition:all .3s ease;
+}
+.card-button-clear:hover {
+  border: 2px solid #e3e3e3;
+  color:#e3e3e3;  
+  cursor: pointer;
+  transition:all .3s ease;
+}
+
+
+#decrypt-record-output{
+  border: 1px solid #494e64;
+  border-radius: 6px;
+  resize:none;
+  width:100%;
+  background-color: #242424;
+  padding:10px;
+  font-size: 14px; 
+  font-weight: 400; 
+  box-sizing: border-box;
+  height:100%;
+}
+
+
+#decrypt-record-output:focus{
+  outline-width: 0;
+}
 
 
 
@@ -276,6 +626,7 @@
   display: flex;
   justify-content: center;
   margin-left: 5px;
+  transition:all .3s ease;
 }
 
 .outer-code-area .tabs .tab .exit-button img{
@@ -287,7 +638,7 @@
   background-color: #343746;
   border:0;
   padding:0;
-
+  transition:all .3s ease;
 }
 
 .outer-code-area .ide{
@@ -421,12 +772,14 @@
   user-select: none;
   padding-top: 5px;
   padding-bottom: 5px;
+  transition:all .3s ease;
 }
 
 
 .fs-title:hover {
   background-color: #343746;
   cursor: pointer;
+  transition:all .3s ease;
 }
 
 .fs-title img{
