Fixed issue where highlighted text was not formatting properly when document ended in newline character

--- a/styles.css
+++ b/styles.css
@@ -336,6 +336,7 @@
   -ms-user-select: none; 
   user-select: none;
   background: rgba(39,41,53,.7);
+  overflow:hidden;
 }
 
 .dropdown-custom .dropdown-content .dropdown-item.selected {
