--- a/styles.css
+++ b/styles.css
@@ -923,15 +923,47 @@ input:checked + .slider:before {
   border-radius: 5px;
   box-sizing: content-box;
   color: var(--stone);
-  display: flex;
   justify-content: center;
   margin-left: 5px;
   transition:all .3s ease;
+  display:flex
 }
 
-.outer-code-area .tabs .tab .exit-button img{
+.outer-code-area .tabs .tab .exit-button .exit-icon{
   height: 18px;
   width: 18px;
+  right: 0px;
+  bottom: 0px;
+  position:absolute;
+  display:none;
+}
+
+.outer-code-area .tabs .tab .exit-button .unsaved-icon{
+  height: 18px;
+  width: 18px;
+  right: 0px;
+  bottom: 0px;
+  position:absolute;
+  z-index: 2;
+
+}
+
+.outer-code-area .tabs .tab .exit-button .exit-img-wrapper{
+  height: 18px;
+  width: 18px;
+  position: relative;
+  z-index: 2;
+
+}
+
+
+.outer-code-area .tabs .tab .exit-button:hover .exit-icon{
+  display:flex;
+}
+
+.outer-code-area .tabs .tab .exit-button:hover .unsaved-icon{
+  display:none;
+
 }
 
 .outer-code-area .tabs .tab .exit-button:hover {
