--- a/styles.css
+++ b/styles.css
@@ -119,28 +119,33 @@
   order:4;
 }
 
-#compile-tab-button {
+#rest-api-tab-button {
   order:5;
 }
 
-#deploy-execute-tab-button {
+#compile-tab-button {
   order:6;
 }
 
-#rest-api-tab-button {
+#deploy-execute-tab-button {
   order:7;
+}
+
+
+#history-tab-button {
+  order:8;
 }
 
 
 #empty-space {
   width:100%;
   height:100%;
-  order:7;
+  order:9;
   box-sizing: border-box;
 }
 
 #settings-tab-button {
-  order:8;
+  order:10;
 }
 
 
@@ -522,6 +527,19 @@
   user-select: none;
 }
 
+.output-title{
+  font-size: 12px;
+  font-weight: 400;
+  font-family:'Inter'; 
+  color: var(--stone);
+  padding-top:6px;
+  -webkit-user-select: none; 
+  -khtml-user-select: none; 
+  -moz-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none;
+}
+
 .input-field{
   margin-bottom: 10px;
 }
@@ -867,7 +885,7 @@
   padding:7.5px;
   padding-left: 0;
   padding-right:0;
-  height:40px;
+  min-height:40px;
 
   font-family:'Inter'; 
   font-size: 14px;
@@ -929,6 +947,8 @@
   -ms-user-select: none; 
   user-select: none;
 
+  /* flex: 0 0 content;
+  min-width:103px; */
   flex: 0 0 103px;
   transition:all .3s ease;
   margin:0; 
@@ -1167,21 +1187,35 @@
 
 
 
+.function-error-title{
+  font-size: 12px;
+  font-weight: 400;
+  font-family:'Inter'; 
+  color: var(--grapefruit);
+  padding-bottom:10px;
+  padding-right: 22px;
+  -webkit-user-select: none; 
+  -khtml-user-select: none; 
+  -moz-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none;
+  text-align:right;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.function-output-title{
+  font-size: 12px;
+  font-weight: 400;
+  font-family:'Inter'; 
+  color: var(--stone);
+  padding-bottom:10px;
+  padding-right: 22px;
+  -webkit-user-select: none; 
+  -khtml-user-select: none; 
+  -moz-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none;
+  text-align:right;
+}
 
 .switch-wrapper {
   display: flex;
